# advent_of_code_2025

./: .gitignore  README.md
day_01/: Cargo.toml
day_01/src/: part_1.rs  part_2.rs  part_3.rs  tests.rs
day_02/: Cargo.toml
day_02/src/: part_1.rs  part_2.rs  tests.rs
day_03/: Cargo.toml
day_03/src/: part_1.rs  part_2.rs  tests.rs
day_04/src/: part_1.rs
