[package]
name = "day_1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.2"



[[bin]]
name="part_1"
path="src/part_1.rs"

[[bin]]
name="part_2"
path="src/part_2.rs"

[[bin]]
name="part_3"
path="src/part_3.rs"